--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=Market_carbon
 # ===============================
 # = Database
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/market_carbon
+spring.datasource.url=jdbc:mysql://localhost:3306/core_ccm
 spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:password}
+spring.datasource.password=${DB_PASSWORD:Tuong2005@}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ===============================
