--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -21,3 +21,18 @@ logging.level.org.hibernate.type.descriptor.sql=TRACE
 # = Server
 # ===============================
 server.port=${SERVER_PORT:8081}
+
+
+# ===============================
+# = Email
+# ===============================
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+#spring.mail.username=${EMAIL_USERNAME}
+#spring.mail.password=${EMAIL_PASSWORD}
+
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
