complete feature login/register/otp/forgot password

--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -12,9 +12,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # = JPA / Hibernate
 # ===============================
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+# Cân nh?c gi?m TRACE khi xong debug ?? ?? ?n log
 logging.level.org.hibernate.type.descriptor.sql=TRACE
 
 # ===============================
@@ -22,17 +23,29 @@ logging.level.org.hibernate.type.descriptor.sql=TRACE
 # ===============================
 server.port=${SERVER_PORT:8082}
 
-
 # ===============================
-# = Email
+# = Email (Gmail + STARTTLS 587)
 # ===============================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-#spring.mail.username=${EMAIL_USERNAME}
-#spring.mail.password=${EMAIL_PASSWORD}
-
-spring.mail.username=${EMAIL_USERNAME}
-spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.username=hoang106408@donga.edu.vn
+# App Password KHÔNG có kho?ng tr?ng
+spring.mail.password=vzzvzqynxjyvouvr
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+# (Tùy ch?n) n?u c?n trust c? th? host
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+# (Khuy?n ngh?) timeouts ?? tránh ?treo? khi SMTP ch?m
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.writetimeout=10000
+
+# (Khuy?n ngh?) B?t log debug cho mail khi c?n soi l?i SMTP
+logging.level.org.springframework.mail=DEBUG
+logging.level.com.carbonx.marketcarbon=DEBUG
+
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
