--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -45,6 +45,8 @@ spring.mail.properties.mail.smtp.writetimeout=10000
 # (Khuy?n ngh?) B?t log debug cho mail khi c?n soi l?i SMTP
 logging.level.org.springframework.mail=DEBUG
 logging.level.com.carbonx.marketcarbon=DEBUG
+logging.level.org.springframework.context.annotation=DEBUG
+
 
 
 spring.data.redis.host=localhost
