--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # = JPA / Hibernate
 # ===============================
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 # Cân nh?c gi?m TRACE khi xong debug ?? ?? ?n log
@@ -51,3 +51,9 @@ logging.level.org.springframework.context.annotation=DEBUG
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+
+# ===============================
+# = File upload
+# ===============================
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
