--- a/backend/Market_carbon/src/main/resources/application-prod.properties
+++ b/backend/Market_carbon/src/main/resources/application-prod.properties
@@ -1,53 +1,39 @@
 spring.application.name=Market_carbon
 
 # ===============================
-# = Database
+# = Database (T?M TH?I)
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/core_ccm
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+# ?? B?n nên dùng RDS ho?c MySQL hosting online
+# Ví d?: MySQL trên Render / Railway / Planetscale / FreeDB.io / CleverCloud
+spring.datasource.url=jdbc:mysql://YOUR_REMOTE_DB_HOST:3306/core_ccm
+spring.datasource.username=root
+spring.datasource.password=victoryac7
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ===============================
-# = JPA / Hibernate
-# ===============================
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-# Cân nh?c gi?m TRACE khi xong debug ?? ?? ?n log
-logging.level.org.hibernate.type.descriptor.sql=TRACE
 
 # ===============================
 # = Server
 # ===============================
-server.port=${SERVER_PORT:8082}
+# ?? KHÔNG ??t c?ng port 8082
+server.port=${PORT:5000}
 
 # ===============================
-# = Email (Gmail + STARTTLS 587)
+# = Email
 # ===============================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=hoang106408@donga.edu.vn
-# App Password KHÔNG có kho?ng tr?ng
 spring.mail.password=vzzvzqynxjyvouvr
-
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-# (Tùy ch?n) n?u c?n trust c? th? host
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
-
-# (Khuy?n ngh?) timeouts ?? tránh ?treo? khi SMTP ch?m
 spring.mail.properties.mail.smtp.connectiontimeout=10000
 spring.mail.properties.mail.smtp.timeout=10000
 spring.mail.properties.mail.smtp.writetimeout=10000
 
-# (Khuy?n ngh?) B?t log debug cho mail khi c?n soi l?i SMTP
 logging.level.org.springframework.mail=DEBUG
 logging.level.com.carbonx.marketcarbon=DEBUG
 logging.level.org.springframework.context.annotation=DEBUG
-
-
-
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
