--- a/backend/Market_carbon/src/main/resources/application-prod.properties
+++ b/backend/Market_carbon/src/main/resources/application-prod.properties
@@ -14,3 +14,7 @@ spring.mail.username=${SPRING_MAIL_USERNAME}
 spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.messages.basename=messages,ValidationMessages
+spring.messages.encoding=UTF-8
+spring.messages.use-code-as-default-message=true
