--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -57,3 +57,7 @@ spring.data.redis.port=6379
 # ===============================
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+spring.messages.basename=messages,ValidationMessages
+spring.messages.encoding=UTF-8
+spring.messages.use-code-as-default-message=true
