--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -61,3 +61,6 @@ spring.servlet.multipart.max-request-size=10MB
 spring.messages.basename=messages,ValidationMessages
 spring.messages.encoding=UTF-8
 spring.messages.use-code-as-default-message=true
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
