--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -62,5 +62,11 @@ spring.messages.basename=messages,ValidationMessages
 spring.messages.encoding=UTF-8
 spring.messages.use-code-as-default-message=true
 
+vnpay.payUrl=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+vnpay.apiUrl=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
+vnpay.returnUrl=http://localhost:8082/vnpay-payment
+vnpay.tmnCode=${VNPAY_TMNCODE}
+vnpay.hashSecret=${VNPAY_HASH_SECRET}
+
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
