--- a/backend/Market_carbon/pom.xml
+++ b/backend/Market_carbon/pom.xml
@@ -15,6 +15,7 @@
 		<java.version>17</java.version>
 		<spring-boot.version>3.3.3</spring-boot.version>
 		<jjwt.version>0.11.5</jjwt.version>
+		<aws.sdk.version>2.25.48</aws.sdk.version>
 	</properties>
 
 	<dependencyManagement>
@@ -123,8 +124,25 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 
+		<!-- AWS SDK v2 for S3 -->
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+			<version>${aws.sdk.version}</version>
+		</dependency>
 
+		<!-- AWS Auth + Core Utilities -->
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>auth</artifactId>
+			<version>${aws.sdk.version}</version>
+		</dependency>
 
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>regions</artifactId>
+			<version>${aws.sdk.version}</version>
+		</dependency>
 
 	</dependencies>
 
