--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.open-in-view=false
 # Cân nh?c gi?m TRACE khi xong debug ?? ?? ?n log
 logging.level.org.hibernate.type.descriptor.sql=TRACE
 
