--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -59,15 +59,20 @@ spring.data.redis.port=6379
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+#i18n
 spring.messages.basename=messages,ValidationMessages
 spring.messages.encoding=UTF-8
 spring.messages.use-code-as-default-message=true
 
+#VNPAY
 vnpay.payUrl=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 vnpay.apiUrl=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
 vnpay.returnUrl=http://localhost:8082/vnpay-payment
 vnpay.tmnCode=${VNPAY_TMNCODE}
 vnpay.hashSecret=${VNPAY_HASH_SECRET}
-
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+#Stripte payment getway
+stripe.api.key=${STRIPE_API_KEY}
+
