--- a/backend/Market_carbon/pom.xml
+++ b/backend/Market_carbon/pom.xml
@@ -11,7 +11,6 @@
 
 	<name>spring-rest-auth-vehicles-kyc</name>
 
-	<!-- ✅ Cấu hình chung -->
 	<properties>
 		<java.version>17</java.version>
 		<spring-boot.version>3.3.3</spring-boot.version>
@@ -23,7 +22,6 @@
 		<lombok.version>1.18.34</lombok.version>
 	</properties>
 
-	<!-- ✅ Quản lý version phụ thuộc -->
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -36,10 +34,8 @@
 		</dependencies>
 	</dependencyManagement>
 
-	<!-- ✅ Danh sách dependency -->
 	<dependencies>
 
-		<!-- Spring Boot core -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -65,14 +61,12 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
-		<!-- Swagger UI -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.6.0</version>
 		</dependency>
 
-		<!-- JWT -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
@@ -91,7 +85,6 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- Lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -99,14 +92,12 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- MapStruct -->
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
 			<version>${mapstruct.version}</version>
 		</dependency>
 
-		<!-- ✅ Bridge giữa Lombok và MapStruct -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok-mapstruct-binding</artifactId>
@@ -120,14 +111,12 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 
-		<!-- Database -->
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- AWS SDK v2 -->
 		<dependency>
 			<groupId>software.amazon.awssdk</groupId>
 			<artifactId>s3</artifactId>
@@ -144,29 +133,31 @@
 			<version>${aws.sdk.version}</version>
 		</dependency>
 
-		<!-- Apache Commons CSV -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-csv</artifactId>
 			<version>1.10.0</version>
 		</dependency>
 
-		<!-- PDFBox -->
 		<dependency>
 			<groupId>org.apache.pdfbox</groupId>
 			<artifactId>pdfbox</artifactId>
 			<version>2.0.34</version>
 		</dependency>
 
-		<!-- Testing -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-csv</artifactId>
+			<version>2.17.2</version>
+		</dependency>
 	</dependencies>
 
-	<!-- ✅ Build plugins -->
 	<build>
 		<plugins>
 			<plugin>
@@ -181,7 +172,6 @@
 						<arg>-parameters</arg>
 					</compilerArgs>
 					<annotationProcessorPaths>
-						<!-- Thứ tự này rất quan trọng -->
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
