[BE]update backend

--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -1,48 +1,27 @@
-# ===============================
-# = DATABASE
-# ===============================
-spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/core_ccm?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC}
-spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:password}
+spring.application.name=Market_carbon
+
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ===============================
-# = SERVER
-# ===============================
-server.port=${SERVER_PORT:8082}
-
-# ===============================
-# = JPA / HIBERNATE
-# ===============================
-spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:update}
-spring.jpa.show-sql=${SHOW_SQL:false}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# ===============================
-# = MAIL
-# ===============================
-spring.mail.host=${MAIL_HOST:smtp.gmail.com}
-spring.mail.port=${MAIL_PORT:587}
-spring.mail.username=${MAIL_USERNAME:no-reply@example.com}
-spring.mail.password=${MAIL_PASSWORD:password}
+server.port=${PORT:5000}
+
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
-spring.mail.default-encoding=UTF-8
+spring.mail.properties.mail.smtp.ssl.trust=${MAIL_HOST}
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.writetimeout=10000
 
-# ===============================
-# = AWS S3
-# ===============================
-aws.s3.bucket=${AWS_S3_BUCKET:carbonx-storagee}
-aws.s3.region=${AWS_REGION:ap-southeast-2}
-aws.accessKeyId=${AWS_ACCESS_KEY_ID}
-aws.secretAccessKey=${AWS_SECRET_ACCESS_KEY}
-aws.s3.public-base-url=${AWS_PUBLIC_URL:https://carbonx-storagee.s3.ap-southeast-2.amazonaws.com}
-
-# ===============================
-# = MESSAGES
-# ===============================
-spring.messages.basename=messages,ValidationMessages
-spring.messages.encoding=UTF-8
-spring.messages.use-code-as-default-message=true
+logging.level.org.springframework.mail=DEBUG
+logging.level.com.carbonx.marketcarbon=DEBUG
+logging.level.org.springframework.context.annotation=DEBUG
