--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -1,23 +1,24 @@
 spring.application.name=Market_carbon
 
+
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-server.port=${PORT:5000}
+server.port=${PORT:8082}
 
-spring.mail.host=${MAIL_HOST}
-spring.mail.port=${MAIL_PORT}
+spring.mail.host=${MAIL_HOST:smtp.gmail.com}
+spring.mail.port=${MAIL_PORT:587}
 spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.ssl.trust=${MAIL_HOST}
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.properties.mail.smtp.connectiontimeout=10000
 spring.mail.properties.mail.smtp.timeout=10000
 spring.mail.properties.mail.smtp.writetimeout=10000
@@ -25,3 +26,9 @@ spring.mail.properties.mail.smtp.writetimeout=10000
 logging.level.org.springframework.mail=DEBUG
 logging.level.com.carbonx.marketcarbon=DEBUG
 logging.level.org.springframework.context.annotation=DEBUG
+
+aws.s3.bucket=${AWS_S3_BUCKET}
+aws.s3.region=${AWS_S3_REGION}
+aws.accessKeyId=${AWS_ACCESS_KEY_ID}
+aws.secretAccessKey=${AWS_SECRET_ACCESS_KEY}
+aws.s3.public-base-url=${AWS_S3_PUBLIC_BASE_URL}
