--- a/backend/Market_carbon/pom.xml
+++ b/backend/Market_carbon/pom.xml
@@ -156,6 +156,11 @@
 			<artifactId>jackson-dataformat-csv</artifactId>
 			<version>2.17.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>24.9.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
