--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -47,7 +47,7 @@ spring.messages.use-code-as-default-message=true
 
 #VNPAY
 vnpay.payUrl=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-vnpay.apiUrl=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
+vnpay.apiUrl=https://sandbox.vnpayment.vn/ merchant_webapi/api/transaction
 vnpay.returnUrl=http://localhost:8082/vnpay-payment
 vnpay.tmnCode=${VNPAY_TMNCODE}
 vnpay.hashSecret=${VNPAY_HASH_SECRET}
