--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -35,24 +35,36 @@ spring.mail.default-encoding=UTF-8
 # = AWS S3
 # ===============================
 aws.s3.bucket=${AWS_S3_BUCKET:carbonx-storagee}
-aws.s3.region=${AWS_REGION:ap-southeast-2}
+aws.s3.region=${AWS_S3_REGION:ap-southeast-2}
 aws.accessKeyId=${AWS_ACCESS_KEY_ID}
 aws.secretAccessKey=${AWS_SECRET_ACCESS_KEY}
-aws.s3.public-base-url=${AWS_PUBLIC_URL:https://carbonx-storagee.s3.ap-southeast-2.amazonaws.com}
+aws.s3.public-base-url=${AWS_S3_PUBLIC_BASE_URL:https://carbonx-storagee.s3.ap-southeast-2.amazonaws.com}
 
-#i18n
+# ===============================
+# = i18n
+# ===============================
 spring.messages.basename=messages,ValidationMessages
 spring.messages.encoding=UTF-8
 spring.messages.use-code-as-default-message=true
 
-#VNPAY
-vnpay.payUrl=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-vnpay.apiUrl=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
-vnpay.returnUrl=http://localhost:8082/vnpay-payment
+# ===============================
+# = VNPAY
+# ===============================
+vnpay.payUrl=${VNPAY_PAY_URL:https://sandbox.vnpayment.vn/paymentv2/vpcpay.html}
+vnpay.apiUrl=${VNPAY_API_URL:https://sandbox.vnpayment.vn/merchant_webapi/api/transaction}
+vnpay.returnUrl=${VNPAY_RETURN_URL:http://localhost:8082/vnpay-payment}
 vnpay.tmnCode=${VNPAY_TMNCODE}
 vnpay.hashSecret=${VNPAY_HASH_SECRET}
+
+# ===============================
+# = THYMELEAF
+# ===============================
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-#Stripte payment getway
-stripe.api.key=${STRIPE_API_KEY}
+# ===============================
+# = PAYMENT (Stripe)
+# ===============================
+spring.profiles.active=${SPRING_PROFILE:no-payment}
+stripe.api.key=${STRIPE_API_KEY:dummy_key}
+
