--- a/backend/Market_carbon/pom.xml
+++ b/backend/Market_carbon/pom.xml
@@ -170,7 +170,13 @@
 			<artifactId>stripe-java</artifactId>
 			<version>24.9.0</version>
 		</dependency>
+        <dependency>
+            <groupId>com.paypal.sdk</groupId>
+            <artifactId>rest-api-sdk</artifactId>
+            <version>1.14.0</version>
+        </dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
