Feat : fix logic of carbon credit , marketplace, VNPay , PayPal

--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -56,3 +56,7 @@ spring.thymeleaf.suffix=.html
 
 #Stripte payment getway
 stripe.api.key=${STRIPE_API_KEY}
+
+paypal.client.id=${PAYPAL_CLIENT_ID}
+paypal.client.secret=${PAYPAL_CLIENT_SECRET}
+paypal.mode=sandbox
