--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -1,43 +1,72 @@
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+# ===============================
+# = DATABASE
+# ===============================
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/core_ccm?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# ===============================
+# = SERVER
+# ===============================
 server.port=${SERVER_PORT:8082}
 
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
 spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:update}
 spring.jpa.show-sql=${SHOW_SQL:false}
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-spring.mail.host=${MAIL_HOST}
-spring.mail.port=${MAIL_PORT}
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
+# ===============================
+# = MAIL
+# ===============================
+spring.mail.host=${MAIL_HOST:smtp.gmail.com}
+spring.mail.port=${MAIL_PORT:587}
+spring.mail.username=${MAIL_USERNAME:no-reply@example.com}
+spring.mail.password=${MAIL_PASSWORD:password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.ssl.trust=${MAIL_TRUST:smtp.gmail.com}
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.default-encoding=UTF-8
 
-aws.s3.bucket=${AWS_S3_BUCKET}
-aws.s3.region=${AWS_S3_REGION}
+# ===============================
+# = AWS S3
+# ===============================
+aws.s3.bucket=${AWS_S3_BUCKET:carbonx-storagee}
+aws.s3.region=${AWS_S3_REGION:ap-southeast-2}
 aws.accessKeyId=${AWS_ACCESS_KEY_ID}
 aws.secretAccessKey=${AWS_SECRET_ACCESS_KEY}
-aws.s3.public-base-url=${AWS_S3_PUBLIC_BASE_URL}
+aws.s3.public-base-url=${AWS_S3_PUBLIC_BASE_URL:https://carbonx-storagee.s3.ap-southeast-2.amazonaws.com}
 
-spring.messages.basename=${SPRING_MESSAGES_BASENAME:messages,ValidationMessages}
-spring.messages.encoding=${SPRING_MESSAGES_ENCODING:UTF-8}
-spring.messages.use-code-as-default-message=${SPRING_MESSAGES_USE_CODE_AS_DEFAULT_MESSAGE:true}
+logging.level.com.carbonx.marketcarbon.service.impl=DEBUG
+logging.level.software.amazon.awssdk.services.s3=DEBUG
 
-vnpay.payUrl=${VNPAY_PAY_URL}
-vnpay.apiUrl=${VNPAY_API_URL}
-vnpay.returnUrl=${VNPAY_RETURN_URL}
+# ===============================
+# = i18n
+# ===============================
+spring.messages.basename=messages,ValidationMessages
+spring.messages.encoding=UTF-8
+spring.messages.use-code-as-default-message=true
+
+# ===============================
+# = VNPAY
+# ===============================
+vnpay.payUrl=${VNPAY_PAY_URL:https://sandbox.vnpayment.vn/paymentv2/vpcpay.html}
+vnpay.apiUrl=${VNPAY_API_URL:https://sandbox.vnpayment.vn/merchant_webapi/api/transaction}
+vnpay.returnUrl=${VNPAY_RETURN_URL:http://localhost:8082/vnpay-payment}
 vnpay.tmnCode=${VNPAY_TMNCODE}
 vnpay.hashSecret=${VNPAY_HASH_SECRET}
 
-spring.thymeleaf.prefix=${SPRING_THYMELEAF_PREFIX:classpath:/templates/}
-spring.thymeleaf.suffix=${SPRING_THYMELEAF_SUFFIX:.html}
-
+# ===============================
+# = STRIPE PAYMENT GATEWAY
+# ===============================
 stripe.api.key=${STRIPE_API_KEY}
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:no-payment}
 
-spring.profiles.active=${SPRING_PROFILE:no-payment}
+# ===============================
+# = THYMELEAF
+# ===============================
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
