--- a/backend/Market_carbon/src/main/resources/application-prod.properties
+++ b/backend/Market_carbon/src/main/resources/application-prod.properties
@@ -47,6 +47,7 @@ paypal.client.id=${PAYPAL_CLIENT_ID}
 paypal.client.secret=${PAYPAL_CLIENT_SECRET}
 vnpay.tmnCode=${VNPAY_TMNCODE}
 vnpay.hashSecret=${VNPAY_HASH_SECRET}
+paypal.mode=sandbox
 
 # ===============================
 # I18N
