--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -63,6 +63,11 @@ vnpay.hashSecret=${VNPAY_HASH_SECRET}
 # = STRIPE PAYMENT GATEWAY
 # ===============================
 stripe.api.key=${STRIPE_API_KEY}
+
+paypal.client.id=${PAYPAL_CLIENT_ID}
+paypal.client.secret=${PAYPAL_CLIENT_SECRET}
+paypal.mode=sandbox
+
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:no-payment}
 
 # ===============================
