--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -14,7 +14,7 @@ server.port=${SERVER_PORT:8082}
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
-spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:create-drop}
+spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:update}
 spring.jpa.show-sql=${SHOW_SQL:false}
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
