--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -68,6 +68,7 @@ vnpay.hashSecret=${VNPAY_HASH_SECRET}
 # = STRIPE
 # ===============================
 stripe.api.key=${STRIPE_API_KEY:dummy_key}
+paypal.mode=sandbox
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
