[BE]update ai config/ fix bug

--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # ===============================
 # = DATABASE
 # ===============================
-spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/core_ccm?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC}
-spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:password}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ===============================
@@ -32,19 +32,17 @@ spring.mail.properties.mail.smtp.ssl.trust=${MAIL_HOST:smtp.gmail.com}
 spring.mail.properties.mail.smtp.connectiontimeout=10000
 spring.mail.properties.mail.smtp.timeout=10000
 spring.mail.properties.mail.smtp.writetimeout=10000
+app.mail.display-name=${MAIL_DISPLAY_NAME:CarbonX Notification Center}
 
 # ===============================
 # = AWS S3
 # ===============================
-aws.s3.bucket=${AWS_BUCKET_NAME}
+aws.s3.bucket=${AWS_S3_BUCKET}
 aws.s3.region=${AWS_REGION}
 aws.accessKeyId=${AWS_ACCESS_KEY_ID}
 aws.secretAccessKey=${AWS_SECRET_ACCESS_KEY}
-aws.s3.public-base-url=${AWS_PUBLIC_BASE_URL}
+aws.s3.public-base-url=${AWS_S3_PUBLIC_BASE_URL}
 
-# ===============================
-# = LOGGING
-# ===============================
 logging.level.com.carbonx.marketcarbon.service.impl=DEBUG
 logging.level.software.amazon.awssdk.services.s3=DEBUG
 
@@ -64,11 +62,19 @@ vnpay.returnUrl=${VNPAY_RETURN_URL:http://localhost:8082/vnpay-payment}
 vnpay.tmnCode=${VNPAY_TMNCODE}
 vnpay.hashSecret=${VNPAY_HASH_SECRET}
 
-# ===============================
-# = STRIPE
-# ===============================
-stripe.api.key=${STRIPE_API_KEY:dummy_key}
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=HTML
+
+
+stripe.api.key=${STRIPE_API_KEY:dummy_key}
 spring.profiles.active=${SPRING_PROFILE:no-payment}
+
+ai.gemini.api-key=${GEMINI_API_KEY}
+ai.gemini.model=${GEMINI_MODEL:gemini-2.5-pro}
+ai.gemini.enabled=${GEMINI_ENABLED:true}
+ai.gemini.timeout-ms=${GEMINI_TIMEOUT_MS:15000}
+
+
