--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -61,7 +61,7 @@ vnpay.apiUrl=${VNPAY_API_URL:https://sandbox.vnpayment.vn/merchant_webapi/api/tr
 vnpay.returnUrl=${VNPAY_RETURN_URL:http://localhost:8082/vnpay-payment}
 vnpay.tmnCode=${VNPAY_TMNCODE}
 vnpay.hashSecret=${VNPAY_HASH_SECRET}
-
+paypal.mode = sandbox
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
