[BE]finish API AiGemini/ add CreditBatch/fixCreditSummary

--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -1,31 +1,48 @@
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
+
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 server.port=${SERVER_PORT:8082}
-spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
-spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:false}
 
-spring.mail.host=${SPRING_MAIL_HOST}
-spring.mail.port=${SPRING_MAIL_PORT}
-spring.mail.username=${SPRING_MAIL_USERNAME}
-spring.mail.password=${SPRING_MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=${SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH}
-spring.mail.properties.mail.smtp.starttls.enable=${SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE}
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+
+
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=${MAIL_HOST}
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.writetimeout=10000
+
+spring.messages.basename=messages,ValidationMessages
+spring.messages.encoding=UTF-8
+spring.messages.use-code-as-default-message=true
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:local:no-payment}
+
 
 ai.gemini.api-key=${AI_GEMINI_API_KEY}
-ai.gemini.model=${AI_GEMINI_MODEL}
-ai.gemini.enabled=${AI_GEMINI_ENABLED}
-ai.gemini.timeout-ms=${AI_GEMINI_TIMEOUT_MS}
+ai.gemini.model=${AI_GEMINI_MODEL:gemini-2.5-pro}
+ai.gemini.enabled=${AI_GEMINI_ENABLED:true}
+ai.gemini.timeout-ms=${AI_GEMINI_TIMEOUT:60000}
+
 
 aws.s3.bucket=${AWS_S3_BUCKET}
 aws.s3.region=${AWS_S3_REGION}
-aws.accessKeyId=${AWS_ACCESS_KEY_ID}
-aws.secretAccessKey=${AWS_SECRET_ACCESS_KEY}
-aws.s3.public-base-url=${AWS_S3_PUBLIC_BASE_URL}
+aws.accessKeyId=${AWS_ACCESS_KEY}
+aws.secretAccessKey=${AWS_SECRET_KEY}
+aws.s3.public-base-url=${AWS_S3_PUBLIC_URL}
+
 
 stripe.api.key=${STRIPE_API_KEY}
 paypal.client.id=${PAYPAL_CLIENT_ID}
 paypal.client.secret=${PAYPAL_CLIENT_SECRET}
-paypal.mode=${PAYPAL_MODE}
+paypal.mode=${PAYPAL_MODE:sandbox}
