--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ build/
 .vscode/
 # Ignore local data folder in FE
 frontend/src/data/
-src/main/resources/application.properties
+**/application.properties
 
 
 
