--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,10 @@
-# Stage 1: build React
+# Stage build 
 FROM node:18 AS build
 WORKDIR /app
 COPY . .
 RUN npm install && npm run build
 
-# Stage 2: serve bằng Nginx
+# Stage runtime nginx
 FROM nginx:1.25
-COPY --from=build /app/build /usr/share/nginx/html
-EXPOSE 80
+COPY --from=build /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
