--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,22 +1,24 @@
 server {
-    listen 80;
-    server_name localhost;
+  listen 80;
+  server_name _;
 
-    root /usr/share/nginx/html;
-    index index.html;
+  root  /usr/share/nginx/html;
+  index index.html;
 
-    #  Route React app (SPA)
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
+  # Load mime types để .js/.css trả đúng Content-Type
+  include /etc/nginx/mime.types;
+  default_type application/octet-stream;
 
-    # Serve JS, CSS, images đúng MIME
-    location ~* \.(?:js|mjs|css|png|jpg|jpeg|gif|ico|svg|woff2?)$ {
-        try_files $uri =404;
-        add_header Cache-Control "public, max-age=31536000, immutable";
-        types {
-            text/javascript js mjs;
-            text/css css;
-        }
-    }
+  # Static assets: cache dài hạn
+  location /assets/ {
+    try_files $uri =404;
+    access_log off;
+    expires 1y;
+    add_header Cache-Control "public, max-age=31536000, immutable";
+  }
+
+  # SPA fallback: mọi route FE trả về index.html
+  location / {
+    try_files $uri $uri/ /index.html;
+  }
 }
