--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -29,3 +29,7 @@ stripe.api.key=${STRIPE_API_KEY}
 paypal.client.id=${PAYPAL_CLIENT_ID}
 paypal.client.secret=${PAYPAL_CLIENT_SECRET}
 paypal.mode=${PAYPAL_MODE}
+
+rate-limit.capacity=10
+rate-limit.refill=10
+rate-limit.duration-minutes=1
