--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -30,6 +30,6 @@ paypal.client.id=${PAYPAL_CLIENT_ID}
 paypal.client.secret=${PAYPAL_CLIENT_SECRET}
 paypal.mode=${PAYPAL_MODE}
 
-rate-limit.capacity=10
-rate-limit.refill=10
-rate-limit.duration-minutes=1
+app.rate-limit.capacity=20
+app.rate-limit.refill=20
+app.rate-limit.duration-minutes=1
