Fix hard code link

--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -33,3 +33,6 @@ paypal.mode=${PAYPAL_MODE}
 app.rate-limit.capacity=20
 app.rate-limit.refill=20
 app.rate-limit.duration-minutes=1
+
+payment_cancel_url=http://localhost:5173/wallet/cancel
+payment_success_url=http://localhost:5173/wallet?order_id=
