Update application.properties with trading fee and Swagger
Added configuration properties for trading fee and Swagger.

--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -43,3 +43,19 @@ ai.vertex.project-id=${AI_VERTEX_PROJECT_ID:}
 ai.vertex.location=${AI_VERTEX_LOCATION:us-central1}
 ai.vertex.model=${AI_VERTEX_MODEL:gemini-2.5-pro}
 ai.vertex.timeout-ms=${AI_VERTEX_TIMEOUT_MS:60000}
+
+
+trading_fee=0.02
+
+logging.level.org.springframework.security=DEBUG
+
+# Cấu hình server cho Swagger
+server.url=https://carbonx.io.vn
+server.description=Production Server
+
+# Cấu hình thông tin chung cho Swagger
+springdoc.title=CarbonX API
+springdoc.version=1.0.0
+springdoc.description=API Services for CarbonX Marketplace Project
+server.servlet.context-path=/
+
