Write Unit Test + READMME.md for Testing

--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -49,11 +49,11 @@ trading_fee=0.02
 
 logging.level.org.springframework.security=DEBUG
 
-# Cáº¥u hÃ¬nh server cho Swagger
+# C?u hình server cho Swagger
 server.url=https://carbonx.io.vn
 server.description=Production Server
 
-# Cáº¥u hÃ¬nh thÃ´ng tin chung cho Swagger
+# C?u hình thông tin chung cho Swagger
 springdoc.title=CarbonX API
 springdoc.version=1.0.0
 springdoc.description=API Services for CarbonX Marketplace Project
