--- a/backend/Market_carbon/src/main/resources/application.properties
+++ b/backend/Market_carbon/src/main/resources/application.properties
@@ -1,60 +1,85 @@
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
 
-server.port=${SERVER_PORT:8082}
-spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
-spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:false}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.mail.host=${SPRING_MAIL_HOST}
-spring.mail.port=${SPRING_MAIL_PORT}
-spring.mail.username=${SPRING_MAIL_USERNAME}
-spring.mail.password=${SPRING_MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=${SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH}
-spring.mail.properties.mail.smtp.starttls.enable=${SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE}
+
+server.port=${SERVER_PORT}
+
+
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=${MAIL_HOST}
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.writetimeout=10000
+
+spring.messages.basename=messages,ValidationMessages
+spring.messages.encoding=UTF-8
+spring.messages.use-code-as-default-message=true
+spring.profiles.active=local:no-payment
+
 
 ai.gemini.api-key=${AI_GEMINI_API_KEY}
 ai.gemini.model=${AI_GEMINI_MODEL}
 ai.gemini.enabled=${AI_GEMINI_ENABLED}
 ai.gemini.timeout-ms=${AI_GEMINI_TIMEOUT_MS}
 
-aws.s3.bucket=${AWS_S3_BUCKET}
-aws.s3.region=${AWS_S3_REGION}
-aws.accessKeyId=${AWS_ACCESS_KEY_ID}
-aws.secretAccessKey=${AWS_SECRET_ACCESS_KEY}
-aws.s3.public-base-url=${AWS_S3_PUBLIC_BASE_URL}
+
+ai.vertex.enabled=${AI_VERTEX_ENABLED}
+ai.vertex.project-id=${AI_VERTEX_PROJECT_ID}
+ai.vertex.location=${AI_VERTEX_LOCATION}
+ai.vertex.model=${AI_VERTEX_MODEL}
+ai.vertex.timeout-ms=${AI_VERTEX_TIMEOUT_MS}
+
+
+aws.s3.bucket=${AWS_BUCKET}
+aws.s3.region=${AWS_REGION}
+aws.accessKeyId=${AWS_ACCESS_KEY}
+aws.secretAccessKey=${AWS_SECRET_KEY}
+aws.s3.public-base-url=${AWS_PUBLIC_BASE_URL}
+
 
 stripe.api.key=${STRIPE_API_KEY}
 paypal.client.id=${PAYPAL_CLIENT_ID}
 paypal.client.secret=${PAYPAL_CLIENT_SECRET}
 paypal.mode=${PAYPAL_MODE}
 
-app.rate-limit.capacity=20
-app.rate-limit.refill=20
-app.rate-limit.duration-minutes=1
-
-payment_cancel_url=https://localhost:5173/wallet/cancel
-payment_success_url=https://localhost:5173/wallet?order_id=
+payment_cancel_url=${PAYMENT_CANCEL_URL}
+payment_success_url=${PAYMENT_SUCCESS_URL}
 
 
-ai.vertex.enabled=${AI_VERTEX_ENABLED:true}
-ai.vertex.project-id=${AI_VERTEX_PROJECT_ID:}
-ai.vertex.location=${AI_VERTEX_LOCATION:us-central1}
-ai.vertex.model=${AI_VERTEX_MODEL:gemini-2.5-pro}
-ai.vertex.timeout-ms=${AI_VERTEX_TIMEOUT_MS:60000}
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=email,profile
+spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT_URI}
+spring.security.oauth2.client.registration.google.client-name=Google
+
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=email
 
 
-trading_fee=0.02
+app.rate-limit.capacity=${RATE_LIMIT_CAPACITY}
+app.rate-limit.refill=${RATE_LIMIT_REFILL}
+app.rate-limit.duration-minutes=${RATE_LIMIT_DURATION_MIN}
+trading_fee=${TRADING_FEE}
 
 logging.level.org.springframework.security=DEBUG
 
-# C?u hình server cho Swagger
-server.url=https://carbonx.io.vn
-server.description=Production Server
 
-# C?u hình thông tin chung cho Swagger
-springdoc.title=CarbonX API
-springdoc.version=1.0.0
-springdoc.description=API Services for CarbonX Marketplace Project
+server.url=${SERVER_URL}
+server.description=${SERVER_DESCRIPTION}
+springdoc.title=${SWAGGER_TITLE}
+springdoc.version=${SWAGGER_VERSION}
+springdoc.description=${SWAGGER_DESCRIPTION}
 server.servlet.context-path=/
+
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
